cert-manager-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx.example.com
  namespace: test
  annotations:
    kubernetes.io/ingress.class: kong
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    cert-manager.io/cluster-issuer: letsencrypt
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: "301"
spec:
  tls:
  - hosts:
    - nginx.example.com
    secretName: nginx.example.com.ssl 
  rules:
  - host: nginx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
